px -> rem, pt. 2

--- a/src/pug/article__item.pug
+++ b/src/pug/article__item.pug
@@ -16,7 +16,7 @@ block wrapper
             section.content
               .color-brand
                 h1 Как самостоятельно заменить тормозную жидкость
-              .content__date 30 ноября 2021
+              .content__date.mb-2 30 ноября 2021
               .section__picture.d-block.d-lg-none
                 +img('content/media/media-7.jpg','img-cover')
               .content__intro Любая часть в автомобиле имеет собственный ресурс и требует своевременной замены. Это же касается и тормозной жидкости. Ездить с расходниками, исчерпавшими свой ресурс, становится опасно — у автомобиля существенно увеличивается путь торможения, при резком снижении скорости колёса уходят в занос, а педаль тормоза начинает «проваливаться» и становится менее отзывчивой.
