--- a/src/pug/contacts.pug
+++ b/src/pug/contacts.pug
@@ -16,30 +16,24 @@ block wrapper
           .accordion__header
             button.accordion__toggler(type="button") ДонШина Ростов
           .accordion__body
-            .contacts.contacts_list
-              .contacts__item.contacts__item_wrap.align-items-start.mb-3
-                svg.contacts__item-icon
-                  use(xlink:href="#icon-placemark")
+            .contacts
+              .contacts__item.d-flex.align-items-center.h5.text-wrap.mb-3
+                +icon('placemark','contacts__icon color-brand mr-2')
                 | г. Ростов-на-Дону; ул. Доватора, 11
-              a.contacts__item.contacts__item_lg.mb-3(href="#")
-                svg.contacts__item-icon
-                  use(xlink:href="#icon-phone-nobg")
+              a.contacts__item.d-flex.align-items-center.h3.font-weight-bold.text-nowrap.mb-3(href="#")
+                +icon('phone-nobg','contacts__icon color-brand mr-2')
                 | +7 (365) 277-70-68
-              a.contacts__item.mb-3(href="#")
-                svg.contacts__item-icon
-                  use(xlink:href="#icon-email")
+              a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
+                +icon('email','contacts__icon color-brand mr-2')
                 | office@don-shina.ru
-              a.contacts__item.mb-3(href="#")
-                svg.contacts__item-icon
-                  use(xlink:href="#icon-wapp-bordered")
+              a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
+                +icon('wapp-bordered','contacts__icon color-brand mr-2')
                 | WhatsApp
-              a.contacts__item.mb-3(href="#")
-                svg.contacts__item-icon
-                  use(xlink:href="#icon-tg-bordered")
+              a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
+                +icon('tg-bordered','contacts__icon color-brand mr-2')
                 | Telegram
-              a.contacts__item.align-items-start(href="#")
-                svg.contacts__item-icon
-                  use(xlink:href="#icon-time")
+              a.contacts__item.d-flex.align-items-start.h5(href="#")
+                +icon('time','contacts__icon color-brand mr-2')
                 span Режим работы:
                   br
                   | Пн.–Пт. 09:00–19:00,
@@ -51,30 +45,24 @@ block wrapper
           .accordion__header
             button.accordion__toggler(type="button") ДонШина Таганрог
           .accordion__body
-            .contacts.contacts_list
-              .contacts__item.contacts__item_wrap.align-items-start.mb-3
-                svg.contacts__item-icon
-                  use(xlink:href="#icon-placemark")
+            .contacts
+              .contacts__item.d-flex.align-items-center.h5.text-wrap.mb-3
+                +icon('placemark','contacts__icon color-brand mr-2')
                 | г. Ростов-на-Дону; ул. Доватора, 11
-              a.contacts__item.contacts__item_lg.mb-3(href="#")
-                svg.contacts__item-icon
-                  use(xlink:href="#icon-phone-nobg")
+              a.contacts__item.d-flex.align-items-center.h3.font-weight-bold.text-nowrap.mb-3(href="#")
+                +icon('phone-nobg','contacts__icon color-brand mr-2')
                 | +7 (365) 277-70-68
-              a.contacts__item.mb-3(href="#")
-                svg.contacts__item-icon
-                  use(xlink:href="#icon-email")
+              a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
+                +icon('email','contacts__icon color-brand mr-2')
                 | office@don-shina.ru
-              a.contacts__item.mb-3(href="#")
-                svg.contacts__item-icon
-                  use(xlink:href="#icon-wapp-bordered")
+              a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
+                +icon('wapp-bordered','contacts__icon color-brand mr-2')
                 | WhatsApp
-              a.contacts__item.mb-3(href="#")
-                svg.contacts__item-icon
-                  use(xlink:href="#icon-tg-bordered")
+              a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
+                +icon('tg-bordered','contacts__icon color-brand mr-2')
                 | Telegram
-              a.contacts__item.align-items-start(href="#")
-                svg.contacts__item-icon
-                  use(xlink:href="#icon-time")
+              a.contacts__item.d-flex.align-items-start.h5(href="#")
+                +icon('time','contacts__icon color-brand mr-2')
                 span Режим работы:
                   br
                   | Пн.–Пт. 09:00–19:00,
@@ -86,30 +74,24 @@ block wrapper
           .accordion__header
             button.accordion__toggler(type="button") ДонШина Волгоград
           .accordion__body
-            .contacts.contacts_list
-              .contacts__item.contacts__item_wrap.align-items-start.mb-3
-                svg.contacts__item-icon
-                  use(xlink:href="#icon-placemark")
+            .contacts
+              .contacts__item.d-flex.align-items-center.h5.text-wrap.mb-3
+                +icon('placemark','contacts__icon color-brand mr-2')
                 | г. Ростов-на-Дону; ул. Доватора, 11
-              a.contacts__item.contacts__item_lg.mb-3(href="#")
-                svg.contacts__item-icon
-                  use(xlink:href="#icon-phone-nobg")
+              a.contacts__item.d-flex.align-items-center.h3.font-weight-bold.text-nowrap.mb-3(href="#")
+                +icon('phone-nobg','contacts__icon color-brand mr-2')
                 | +7 (365) 277-70-68
-              a.contacts__item.mb-3(href="#")
-                svg.contacts__item-icon
-                  use(xlink:href="#icon-email")
+              a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
+                +icon('email','contacts__icon color-brand mr-2')
                 | office@don-shina.ru
-              a.contacts__item.mb-3(href="#")
-                svg.contacts__item-icon
-                  use(xlink:href="#icon-wapp-bordered")
+              a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
+                +icon('wapp-bordered','contacts__icon color-brand mr-2')
                 | WhatsApp
-              a.contacts__item.mb-3(href="#")
-                svg.contacts__item-icon
-                  use(xlink:href="#icon-tg-bordered")
+              a.contacts__item.d-flex.align-items-center.h5.text-nowrap.mb-3(href="#")
+                +icon('tg-bordered','contacts__icon color-brand mr-2')
                 | Telegram
-              a.contacts__item.align-items-start(href="#")
-                svg.contacts__item-icon
-                  use(xlink:href="#icon-time")
+              a.contacts__item.d-flex.align-items-start.h5(href="#")
+                +icon('time','contacts__icon color-brand mr-2')
                 span Режим работы:
                   br
                   | Пн.–Пт. 09:00–19:00,
