--- a/src/pug/personal-user.pug
+++ b/src/pug/personal-user.pug
@@ -9,7 +9,7 @@ block personal
     .section__wrapper.pt-0.pb-3
       form.form(action="#")
         .form__header.form__header_px.form__header_py.mb-4
-          .form__title.form__title_colored.mb-0 Подробно заполненные персональные данные сделают работу с сайтом удобнее и быстрее:
+          .form__title.h3.font-weight-bold.color-brand Подробно заполненные персональные данные сделают работу с сайтом удобнее и быстрее:
         .form__section.form__section_content.form__section_px.pb-0.mb-3
           .row
             .col-md-5
