--- a/src/pug/sales-item.pug
+++ b/src/pug/sales-item.pug
@@ -14,8 +14,8 @@ block wrapper
 
     .section
       .sale-item.sale-item_section
-        .sale-item__header
-          img.img-cover(src="../img/content/sales/sales-1.jpg" alt="")
+        .sale-item__header.mb-4
+          +img('content/sales/sales-1.jpg','img-cover')
           .sale-item__date До 30 ноября
         .sale-item__body
           .content.content_expanded
