--- a/src/scss/tpl/_pathway.scss
+++ b/src/scss/tpl/_pathway.scss
@@ -2,21 +2,21 @@
   @include h6;
 
   @include media-breakpoint-up(lg) {
-    margin: 0 0 28px;
+    margin: 0 0 1.75rem;
   }
 
   @include media-breakpoint-down(md) {
-    margin: 0 0 16px;
+    margin: 0 0 1rem;
   }
 }
 
 .pathway__link {
   @include inline-block;
-  margin: 0 4px 0 0;
+  margin: 0 .25rem 0 0;
 
   &:after {
     content: '/';
-    margin: 0 0 0 4px;
+    margin: 0 0 0 .25rem;
   }
 }
 
