--- a/src/pug/base/filter-tires.pug
+++ b/src/pug/base/filter-tires.pug
@@ -1,14 +1,14 @@
 .filter.filter_sticky
   .filter__body
     form.form.form_bg.form_filter(action="#")
-      .form__header
-        .form__title.form__title_icon
-          svg.form__title-icon
+      .form__header.d-flex.align-items-center.justify-content-between.d-lg-block
+        .form__title.form__title_icon.d-flex.align-items-center.h3.font-weight-bold.color-brand.mb-0.mb-lg-2
+          svg.form__title-icon.mr-2
             use(xlink:href="#icon-tires")
           | Подбор шин
         button.btn-link(type="reset") Сбросить
       .form__section
-        .form__section-title Типоразмер
+        .form__section-title.h6.color-disabled.mb-4 Типоразмер
         .row
           .col-4.col-lg-12
             .form__select.mb-lg-4
@@ -44,7 +44,7 @@
                 option 13C
         button.form__section-toggler.btn-link.mt-lg-4(type="button") Добавить размер для спарки
       .form__section.form__section_hidden
-        .form__section-title Типоразмер (задняя ось)
+        .form__section-title.h6.color-disabled.mb-4 Типоразмер (задняя ось)
         .row
           .col-4.col-lg-12
             .form__select.mb-lg-4
@@ -79,7 +79,7 @@
                 option 13
                 option 13C
       .form__section
-        .form__section-title Тип
+        .form__section-title.h6.color-disabled.mb-4 Тип
         input.form__toggler.form__toggler_checkbox(id="param-1" type="checkbox" value="")
         label.form__label.mb-4(for="param-1")
           span.form__label-icon
@@ -99,7 +99,7 @@
               use(xlink:href="#icon-checked")
           span.form__label-title Легковые
       .form__section
-        .form__section-title Runflat
+        .form__section-title.h6.color-disabled.mb-4 Runflat
         input.form__toggler.form__toggler_checkbox(id="Runflat" type="checkbox" value="")
         label.form__label(for="Runflat")
           span.form__label-icon
@@ -107,17 +107,17 @@
               use(xlink:href="#icon-checked")
           span.form__label-title Да
       .form__section
-        .form__section-title Цена, ₽
+        .form__section-title.h6.color-disabled.mb-4 Цена, ₽
         .row.mb-3
           .form__item.col-6
-            label.form__label.form__label_plain От
+            label.form__label.form__label_plain.color-disabled От
             input#price-min.form__field(type="text" value="")
           .form__item.col-6
-            label.form__label.form__label_plain До
+            label.form__label.form__label_plain.color-disabled До
             input#price-max.form__field(type="text" value="")
         #price-ranger.form__slider
       .form__section
-        .form__section-title Наличие
+        .form__section-title.h6.color-disabled.mb-4 Наличие
         input.form__toggler.form__toggler_checkbox(id="instock" type="checkbox" value="")
         label.form__label(for="instock")
           span.form__label-icon
@@ -125,7 +125,7 @@
               use(xlink:href="#icon-checked")
           span.form__label-title Сейчас в наличии
       .form__section.border-0.pb-0
-        .form__section-title Бренд
+        .form__section-title.h6.color-disabled.mb-4 Бренд
         .form__item.mb-4
           input.form__field(type="text" value="")
           label.form__label.form__label_title Введите название
@@ -190,7 +190,7 @@
         button.btn-unstyled(type="submit")
           span.readmore.readmore_arrow-down Показать еще
     .filter__alert(style="bottom:0;")
-      .filter__alert-info
-        .text-sm Найдено:
+      .filter__alert-info.h2.font-weight-bold.d-flex.align-items-center.mb-lg-1
+        .h5.font-weight-normal.mr-2 Найдено:
         | 713
       button.btn.text-uppercase.btn_bordered.px-3(type="button") Показать
