--- a/src/pug/category-wheels.pug
+++ b/src/pug/category-wheels.pug
@@ -6,7 +6,7 @@ block meta
 block filter
   .header__footer
     button.filter-toggler(type="button")
-      svg.filter-toggler__icon
+      svg.filter-toggler__icon.mr-2
         use(xlink:href="#icon-filter")
       span.filter-toggler__title
         span.filter-toggler__show Показать
