--- a/src/pug/main.pug
+++ b/src/pug/main.pug
@@ -7,17 +7,17 @@ block wrapper
     .wrapper
         .tabs.mb-5
             ul.tabs__nav.nav.nav-tabs(role="tablist")
-                li.tabs__nav-item.nav-item
+                li.tabs__nav-item.flex-grow-1.nav-item
                     a.tabs__nav-link.tabs__nav-link_notitle.nav-link.active(href="#filter-tires" data-toggle="tab" role="tab" aria-controls="filter-tires" aria-selected="true")
                         svg.tabs__nav-icon
                             use(xlink:href="#icon-tires")
                         span.tabs__nav-title Подбор шин
-                li.tabs__nav-item.nav-item
+                li.tabs__nav-item.flex-grow-1.nav-item
                     a.tabs__nav-link.tabs__nav-link_notitle.nav-link(href="#filter-wheels" data-toggle="tab" role="tab" aria-controls="filter-wheels" aria-selected="false")
                         svg.tabs__nav-icon
                             use(xlink:href="#icon-wheels")
                         span.tabs__nav-title Подбор дисков
-                li.tabs__nav-item.nav-item
+                li.tabs__nav-item.flex-grow-1.nav-item
                     a.tabs__nav-link.tabs__nav-link_notitle.nav-link(href="#filter-cars" data-toggle="tab" role="tab" aria-controls="filter-cars" aria-selected="false")
                         svg.tabs__nav-icon
                             use(xlink:href="#icon-car")
@@ -190,7 +190,7 @@ block wrapper
                                         option Значение 5
                                     button.dropdown-toggle(id="filter-cars-dropdown" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false") Выберете марку
                                     .dropdown-menu(aria-labelledby="filter-cars-dropdown")
-                                        .dropdown-menu__header.bs-searchbox
+                                        .dropdown-menu__header.mb-2.bs-searchbox
                                             input.dropdown__field(type="search" autocomplete="off" role="combobox" aria-label="Search" aria-controls="bs-select-5" aria-autocomplete="list")
                                         .dropdown-menu__body
                                             ul.dropdown-menu__list
@@ -224,7 +224,7 @@ block wrapper
                                         option Значение 5
                                     button.dropdown-toggle(id="filter-cars-dropdown" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" disabled) Модель
                                     .dropdown-menu(aria-labelledby="filter-cars-dropdown")
-                                        .dropdown-menu__header.bs-searchbox
+                                        .dropdown-menu__header.mb-2.bs-searchbox
                                             input.dropdown__field(type="search" autocomplete="off" role="combobox" aria-label="Search" aria-controls="bs-select-5" aria-autocomplete="list")
                                         .dropdown-menu__body
                                             ul.dropdown-menu__list
@@ -246,7 +246,7 @@ block wrapper
                                         option Значение 5
                                     button.dropdown-toggle(id="filter-cars-dropdown" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" disabled) Кузов
                                     .dropdown-menu(aria-labelledby="filter-cars-dropdown")
-                                        .dropdown-menu__header.bs-searchbox
+                                        .dropdown-menu__header.mb-2.bs-searchbox
                                             input.dropdown__field(type="search" autocomplete="off" role="combobox" aria-label="Search" aria-controls="bs-select-5" aria-autocomplete="list")
                                         .dropdown-menu__body
                                             ul.dropdown-menu__list
@@ -268,7 +268,7 @@ block wrapper
                                         option Значение 5
                                     button.dropdown-toggle(id="filter-cars-dropdown" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" disabled) Двигатель
                                     .dropdown-menu(aria-labelledby="filter-cars-dropdown")
-                                        .dropdown-menu__header.bs-searchbox
+                                        .dropdown-menu__header.mb-2.bs-searchbox
                                             input.dropdown__field(type="search" autocomplete="off" role="combobox" aria-label="Search" aria-controls="bs-select-5" aria-autocomplete="list")
                                         .dropdown-menu__body
                                             ul.dropdown-menu__list
@@ -336,35 +336,35 @@ block wrapper
 
         .section.row
             .col-lg-7
-                .banner.banner_carousel
+                .banner.banner_carousel.mb-5.mb-lg-0
                     .slides.slides_banners.swiper-container
                         .swiper-wrapper
                             a.swiper-slide.px-0(href="#")
-                                img.img-cover(src="../img/content/slides/slide-1.jpg" alt="" title="")
+                              +img('content/slides/slide-1.jpg','img-cover')
                             a.swiper-slide.px-0(href="#")
-                                img.img-cover(src="../img/content/slides/slide-1.jpg" alt="" title="")
+                              +img('content/slides/slide-1.jpg','img-cover')
                             a.swiper-slide.px-0(href="#")
-                                img.img-cover(src="../img/content/slides/slide-1.jpg" alt="" title="")
+                              +img('content/slides/slide-1.jpg','img-cover')
                             a.swiper-slide.px-0(href="#")
-                                img.img-cover(src="../img/content/slides/slide-1.jpg" alt="" title="")
+                              +img('content/slides/slide-1.jpg','img-cover')
                             a.swiper-slide.px-0(href="#")
-                                img.img-cover(src="../img/content/slides/slide-1.jpg" alt="" title="")
+                              +img('content/slides/slide-1.jpg','img-cover')
                     .slides-banners-pagination.slides-pagination
             .col-lg-4.offset-lg-1.col-md-6.offset-md-3.col-sm-8.offset-sm-2
                 .banner.text-uppercase
-                    img.img-cover(src="../img/content/banners/banner-1.jpg" alt="" title="")
-                    .banner__inner
-                        .banner__title.banner__title_colored.banner__title_sm Запись на шиномонтаж онлайн
-                        a.btn.text-uppercase(href="#") Записаться
+                  +img('content/banners/banner-1.jpg','img-cover')
+                  .banner__inner
+                    .banner__title.banner__title_colored.banner__title_sm Запись на шиномонтаж онлайн
+                    a.btn.text-uppercase(href="#") Записаться
 
-        .tabs
+        .tabs.mb-5
             ul.tabs__nav.nav.nav-tabs(role="tablist")
-                li.tabs__nav-item.nav-item
+                li.tabs__nav-item.flex-grow-1.nav-item
                     a.tabs__nav-link.nav-link.active(href="#links-tires" data-toggle="tab" role="tab" aria-controls="links-tires" aria-selected="true")
                         svg.tabs__nav-icon
                             use(xlink:href="#icon-tires")
                         span.tabs__nav-title.text-uppercase шины
-                li.tabs__nav-item.nav-item
+                li.tabs__nav-item.flex-grow-1.nav-item
                     a.tabs__nav-link.nav-link(href="#links-wheels" data-toggle="tab" role="tab" aria-controls="links-wheels" aria-selected="false")
                         svg.tabs__nav-icon
                             use(xlink:href="#icon-wheels")
@@ -452,42 +452,42 @@ block wrapper
                             .media.mb-4
                                 a.media__picture.mr-2(href="#")
                                     img.img-fluid(src="../img/content/media/media-1.jpg" alt="" title="")
-                                .media__meta
+                                .media__meta.flex-grow-1
                                     a.media__title.d-block.mb-2(href="#") Работа на майские праздники 2021
                                     .media__date 23.10.2021
                         .col-md-6
                             .media.mb-4
                                 a.media__picture.mr-2(href="#")
                                     img.img-fluid(src="../img/content/media/media-2.jpg" alt="" title="")
-                                .media__meta
+                                .media__meta.flex-grow-1
                                     a.media__title.d-block.mb-2(href="#") Выходные Дини с 29 марта до 5 апреля
                                     .media__date 23.10.2021
                         .col-md-6
                             .media.mb-4
                                 a.media__picture.mr-2(href="#")
                                     img.img-fluid(src="../img/content/media/media-3.jpg" alt="" title="")
-                                .media__meta
+                                .media__meta.flex-grow-1
                                     a.media__title.d-block.mb-2(href="#") Открытие шинного центра ДонШина Ростов-на-Дону.
                                     .media__date 23.10.2021
                         .col-md-6
                             .media.mb-4
                                 a.media__picture.mr-2(href="#")
                                     img.img-fluid(src="../img/content/media/media-4.jpg" alt="" title="")
-                                .media__meta
+                                .media__meta.flex-grow-1
                                     a.media__title.d-block.mb-2(href="#") Открытие шинного центра ДонШина Ростов-на-Дону.
                                     .media__date 23.10.2021
                         .col-md-6
                             .media.mb-4
                                 a.media__picture.mr-2(href="#")
                                     img.img-fluid(src="../img/content/media/media-5.jpg" alt="" title="")
-                                .media__meta
+                                .media__meta.flex-grow-1
                                     a.media__title.d-block.mb-2(href="#") Рассрочка на шины и диски!
                                     .media__date 23.10.2021
                         .col-md-6
                             .media.mb-4
                                 a.media__picture.mr-2(href="#")
                                     img.img-fluid(src="../img/content/media/media-6.jpg" alt="" title="")
-                                .media__meta
+                                .media__meta.flex-grow-1
                                     a.media__title.d-block.mb-2(href="#") Открытие шинного центра ДонШина Ростов-на-Дону.
                                     .media__date 23.10.2021
                     .text-center
@@ -506,16 +506,16 @@ block wrapper
                         .section__title.pr-lg-5 Интернет-магазин резины, авто шин и дисков в Ростове-на-Дону
                         .row.flex-grow-1
                             .col-xl-6.col-lg-8.col-md-6.d-flex.flex-column.justify-content-around.h-100
-                                .feature
-                                    .feature__value 10
-                                        span.text-sm лет
-                                    .feature__title на рынке продаж шин дисков и автотоваров.
-                                .feature
-                                    .feature__value &gt;2000
-                                    .feature__title качественных товаров в каталоге сайта.
+                              .feature.mb-5.mb-lg-4
+                                .feature__value.font-weight-bold.color-brand 10
+                                  span.h1 лет
+                                .h4 на рынке продаж шин дисков и автотоваров.
+                              .feature.mb-5.mb-lg-0
+                                .feature__value.font-weight-bold.color-brand &gt;2000
+                                .h4 качественных товаров в каталоге сайта.
                     .col-lg-6.ml-lg-0.col-sm-10.offset-sm-1
-                        .content
-                            p В нашем интернет-магазине шин и дисков Don-Shina.ru (Дон Шина) представлен большой выбор зимней и летней резины ведущих мировых производителей. Надежные и проверенные шины Nokian (Нокиан), Goodyear, зимние и летние шины Michelin, недорогая резина Continental, Yokohama, Gislaved, Kleber, BF Goodrich, а также автомобильные покрышки отечественных производителей по низким ценам. Купить летние и зимние шины в Ростове можно по низким ценам. Кроме того, в ассортименте присутствуют диски и шины грузовые и для внедорожников. Шины в Таганроге. Шины Шахты. Шины в Новочеркасске.
-                            p Кроме летних и зимних шин разных размеров, у нас можно купить литые диски, кованые, штампованные на авто: Lenso, Enkei, Slik, ВСМПО, литые диски LS Replica (Реплика), KOSEI, KFZ, Futek, Теч-лайн, хромированные литые диски Futek, а также осуществляем хранение шин и литых дисков на авто всех размеров. Если вы захотите купить диски (автомобильные) на сумму 50000 руб и более, то мы предоставим вам бесплатную доставку. На нашем сайте вы можете воспользоваться удобным подбором шин и дисков по марке автомобиля, а также заказать шины на Дом. В магазине автомобильных шин и дисков ДонШина цены ниже рыночных.
-                        .text-lg-left.text-center
-                            a.readmore(href="#") Узнать больше о компании
+                      .content
+                        p В нашем интернет-магазине шин и дисков Don-Shina.ru (Дон Шина) представлен большой выбор зимней и летней резины ведущих мировых производителей. Надежные и проверенные шины Nokian (Нокиан), Goodyear, зимние и летние шины Michelin, недорогая резина Continental, Yokohama, Gislaved, Kleber, BF Goodrich, а также автомобильные покрышки отечественных производителей по низким ценам. Купить летние и зимние шины в Ростове можно по низким ценам. Кроме того, в ассортименте присутствуют диски и шины грузовые и для внедорожников. Шины в Таганроге. Шины Шахты. Шины в Новочеркасске.
+                        p Кроме летних и зимних шин разных размеров, у нас можно купить литые диски, кованые, штампованные на авто: Lenso, Enkei, Slik, ВСМПО, литые диски LS Replica (Реплика), KOSEI, KFZ, Futek, Теч-лайн, хромированные литые диски Futek, а также осуществляем хранение шин и литых дисков на авто всех размеров. Если вы захотите купить диски (автомобильные) на сумму 50000 руб и более, то мы предоставим вам бесплатную доставку. На нашем сайте вы можете воспользоваться удобным подбором шин и дисков по марке автомобиля, а также заказать шины на Дом. В магазине автомобильных шин и дисков ДонШина цены ниже рыночных.
+                      .text-lg-left.text-center
+                        a.readmore(href="#") Узнать больше о компании
