--- a/src/pug/personal.pug
+++ b/src/pug/personal.pug
@@ -6,7 +6,7 @@ block meta
 block filter
   .header__footer
     button.filter-toggler(type="button")
-      svg.filter-toggler__icon
+      svg.filter-toggler__icon.mr-2
         use(xlink:href="#icon-filter")
       span.filter-toggler__title
         span.filter-toggler__show Показать
@@ -25,47 +25,47 @@ block wrapper
         .filter.filter_sticky
           .filter__body
             nav.leftmenu
-              a.leftmenu__item(href="#")
-                svg.leftmenu__item-icon
+              a.leftmenu__item.d-flex.align-items-center.h4(href="#")
+                svg.leftmenu__item-icon.color-brand.mr-2
                   use(xlink:href="#icon-case")
-                span.leftmenu__item-title Мои заказы
-                span.leftmenu__item-badge.bg-brand 2
-              a.leftmenu__item(href="#")
-                svg.leftmenu__item-icon
+                span.leftmenu__item-title.d-block.overflow-hidden.text-nowrap.mr-2 Мои заказы
+                span.leftmenu__badge.h5.text-nowrap.color-white.bg-brand.px-2 2
+              a.leftmenu__item.d-flex.align-items-center.h4(href="#")
+                svg.leftmenu__item-icon.color-brand.mr-2
                   use(xlink:href="#icon-favourite")
-                span.leftmenu__item-title Избранное
-                span.leftmenu__item-badge.bg-success 3
-              a.leftmenu__item(href="#")
-                svg.leftmenu__item-icon
+                span.leftmenu__item-title.d-block.overflow-hidden.text-nowrap.mr-2 Избранное
+                span.leftmenu__badge.h5.text-nowrap.color-white.bg-success.px-2 3
+              a.leftmenu__item.d-flex.align-items-center.h4(href="#")
+                svg.leftmenu__item-icon.color-brand.mr-2
                   use(xlink:href="#icon-gift")
-                span.leftmenu__item-title Бонусные рубли
-                span.leftmenu__item-badge.bg-success 300
-                  span.text-sm Б.₽.
-              a.leftmenu__item(href="#")
-                svg.leftmenu__item-icon
+                span.leftmenu__item-title.d-block.overflow-hidden.text-nowrap.mr-2 Бонусные рубли
+                span.leftmenu__badge.h5.text-nowrap.color-white.bg-success.px-2 300
+                  span.leftmenu__badge-text Б.₽.
+              a.leftmenu__item.d-flex.align-items-center.h4(href="#")
+                svg.leftmenu__item-icon.color-brand.mr-2
                   use(xlink:href="#icon-tool")
-                span.leftmenu__item-title Запись на услуги
-              a.leftmenu__item(href="#")
-                svg.leftmenu__item-icon
+                span.leftmenu__item-title.d-block.overflow-hidden.text-nowrap.mr-2 Запись на услуги
+              a.leftmenu__item.d-flex.align-items-center.h4(href="#")
+                svg.leftmenu__item-icon.color-brand.mr-2
                   use(xlink:href="#icon-settings")
-                span.leftmenu__item-title Подбор по VIN
-                span.leftmenu__item-badge.bg-success 1
-              a.leftmenu__item(href="#")
-                svg.leftmenu__item-icon
+                span.leftmenu__item-title.d-block.overflow-hidden.text-nowrap.mr-2 Подбор по VIN
+                span.leftmenu__badge.h5.text-nowrap.color-white.bg-success.px-2 1
+              a.leftmenu__item.d-flex.align-items-center.h4(href="#")
+                svg.leftmenu__item-icon.color-brand.mr-2
                   use(xlink:href="#icon-user")
-                span.leftmenu__item-title Персональные данные
-              a.leftmenu__item(href="#")
-                svg.leftmenu__item-icon
+                span.leftmenu__item-title.d-block.overflow-hidden.text-nowrap.mr-2 Персональные данные
+              a.leftmenu__item.d-flex.align-items-center.h4(href="#")
+                svg.leftmenu__item-icon.color-brand.mr-2
                   use(xlink:href="#icon-car")
-                span.leftmenu__item-title Мой автомобиль
-              a.leftmenu__item.active(href="#")
-                svg.leftmenu__item-icon
+                span.leftmenu__item-title.d-block.overflow-hidden.text-nowrap.mr-2 Мой автомобиль
+              a.leftmenu__item.d-flex.align-items-center.h4.active(href="#")
+                svg.leftmenu__item-icon.color-brand.mr-2
                   use(xlink:href="#icon-shield")
-                span.leftmenu__item-title Смена пароля
-              a.leftmenu__item(href="#")
-                svg.leftmenu__item-icon
+                span.leftmenu__item-title.d-block.overflow-hidden.text-nowrap.mr-2 Смена пароля
+              a.leftmenu__item.d-flex.align-items-center.h4(href="#")
+                svg.leftmenu__item-icon.color-brand.mr-2
                   use(xlink:href="#icon-exit")
-                span.leftmenu__item-title Выход
+                span.leftmenu__item-title.d-block.overflow-hidden.text-nowrap.mr-2 Выход
       .col-xl-9.col-lg-8
         block personal
 
