--- a/src/scss/tpl/_pagination.scss
+++ b/src/scss/tpl/_pagination.scss
@@ -12,7 +12,7 @@
     @include color($color__brand);
     @include fw(22px);
     @include wh(22px);
-    margin: 0 8px 0 0;
+    margin: 0 .5rem 0 0;
     align-items: center;
     justify-content: center;
     border-radius: 50%;
@@ -36,7 +36,7 @@
 
     &:before {
         top: 50%;
-        margin: -4px 0 0;
+        margin: -.25rem 0 0;
     }
 
     &.pagination__nav_prev {
