--- a/src/scss/tpl/_search.scss
+++ b/src/scss/tpl/_search.scss
@@ -24,6 +24,6 @@
     position: absolute;
     top: 50%;
     right: 14px;
-    margin: -9px 0 0;
+    margin: -.563rem 0 0;
     color: $color__brand;
 }
