--- a/src/scss/tpl/_section.scss
+++ b/src/scss/tpl/_section.scss
@@ -1,178 +1,178 @@
 .section {
-    margin-bottom: 40px;
+  margin-bottom: 40px;
 
-    &.section_top {
-        margin-top: -40px;
-        position: relative;
+  &.section_top {
+    margin-top: -40px;
+    position: relative;
 
-        h1 {
-            @include h1;
-        }
+    h1 {
+      @include h1;
     }
+  }
 }
 
 .section__wrapper {
-    @include py(40px);
-    border-radius: 8px;
-    box-shadow: 1px 1px 8px 0 rgba(0, 0, 0, .16);
+  @include py(40px);
+  border-radius: 8px;
+  box-shadow: 1px 1px 8px 0 rgba(0, 0, 0, .16);
 
+  @include media-breakpoint-up(lg) {
+    height: 100%;
+  }
+
+  @include media-breakpoint-down(md) {
+    height: auto;
+  }
+
+  @include media-breakpoint-only(xs) {
+    @include px(16px);
+  }
+
+  &.section__wrapper_offset {
     @include media-breakpoint-up(lg) {
-        height: 100%;
+      padding-left: (100%/9);
+    }
+
+    @include media-breakpoint-between(sm,md) {
+      @include px(100%/12);
     }
 
     @include media-breakpoint-down(md) {
-        height: auto;
+      margin-bottom: 40px;
+    }
+  }
+
+  &.section__wrapper_px {
+    @include media-breakpoint-up(md) {
+      @include px(40px);
     }
 
-    @include media-breakpoint-only(xs) {
-        @include px(16px);
+    .section__picture {
+      @include media-breakpoint-up(lg) {
+        margin-right: -40px;
+      }
     }
 
-    &.section__wrapper_offset {
-        @include media-breakpoint-up(lg) {
-            padding-left: (100%/9);
-        }
-
-        @include media-breakpoint-between(sm,md) {
-            @include px(100%/12);
-        }
-
-        @include media-breakpoint-down(md) {
-            margin-bottom: 40px;
-        }
+    @include media-breakpoint-down(sm) {
+      @include mx(-1rem);
+      padding: 24px 16px 36px;
+      border-radius: 0;
     }
 
-    &.section__wrapper_px {
-        @include media-breakpoint-up(md) {
-            @include px(40px);
-        }
-
-        .section__picture {
-            @include media-breakpoint-up(lg) {
-                margin-right: -40px;
-            }
-        }
-
-        @include media-breakpoint-down(sm) {
-            @include mx(-16px);
-            padding: 24px 16px 36px;
-            border-radius: 0;
-        }
-
-        &.mx-0 {
-            @include media-breakpoint-down(sm) {
-                border-radius: 8px;
-            }
-        }
+    &.mx-0 {
+      @include media-breakpoint-down(sm) {
+        border-radius: 8px;
+      }
     }
+  }
 
-    &.section__wrapper_grid {
-        overflow: hidden;
+  &.section__wrapper_grid {
+    overflow: hidden;
 
-        @include media-breakpoint-up(lg) {
-            display: grid;
-            grid-column-gap: 60px;
-            grid-template-columns: repeat(2,1fr);
-        }
+    @include media-breakpoint-up(lg) {
+      display: grid;
+      grid-column-gap: 60px;
+      grid-template-columns: repeat(2,1fr);
     }
+  }
 }
 
 .section__title {
-    @include h2;
-    font-weight: bold;
-    margin: 0 0 24px;
+  @include h2;
+  font-weight: bold;
+  margin: 0 0 24px;
 
-    &.section__title_sm {
-        @include h3;
-        margin: 0 0 12px;
-    }
+  &.section__title_sm {
+    @include h3;
+    margin: 0 0 12px;
+  }
 }
 
 .section__intro {
-    @include h4;
-    margin: 0 0 32px;
+  @include h4;
+  margin: 0 0 32px;
 }
 
 .section__picture {
-    @include media-breakpoint-up(lg) {
-        @include my(-40px);
+  @include media-breakpoint-up(lg) {
+    @include my(-2.5rem);
+  }
+
+  @include media-breakpoint-only(md) {
+    @include mx(-2.5rem);
+  }
+
+  @include media-breakpoint-down(md) {
+    margin-bottom: 24px;
+  }
+
+  @include media-breakpoint-down(sm) {
+    @include mx(-1rem);
+  }
+
+  &.section__picture_top {
+    @include pos(0,0);
+    right: 0;
+    bottom: 0;
+    margin: 0;
+  }
+
+  &.section__picture_left {
+    @include media-breakpoint-down(md) {
+      @include mx(0);
+      text-align: center;
     }
 
     @include media-breakpoint-only(md) {
-        @include mx(-40px);
-    }
-
-    @include media-breakpoint-down(md) {
-        margin-bottom: 24px;
+      margin-top: -40px;
     }
 
     @include media-breakpoint-down(sm) {
-        @include mx(-16px);
+      margin-top: -24px;
     }
-
-    &.section__picture_top {
-        @include pos(0,0);
-        right: 0;
-        bottom: 0;
-        margin: 0;
-    }
-
-    &.section__picture_left {
-        @include media-breakpoint-down(md) {
-            @include mx(0);
-            text-align: center;
-        }
-
-        @include media-breakpoint-only(md) {
-            margin-top: -40px;
-        }
-
-        @include media-breakpoint-down(sm) {
-            margin-top: -24px;
-        }
-    }
+  }
 }
 
 .section__video {
-    @include media-breakpoint-only(md) {
-        @include mx(-40px);
-    }
+  @include media-breakpoint-only(md) {
+    @include mx(-2.5rem);
+  }
 
-    @include media-breakpoint-down(sm) {
-        @include mx(-16px);
-    }
+  @include media-breakpoint-down(sm) {
+    @include mx(-1rem);
+  }
 }
 
 .section__body {
-    @include border(0 0 1px,$color__border);
+  @include border(0 0 1px,$color__border);
 
-    @include media-breakpoint-up(md) {
-        @include offset(0 0 16px,0 32px 32px);
-    }
+  @include media-breakpoint-up(md) {
+    @include offset(0 0 16px,0 32px 32px);
+  }
 
-    @include media-breakpoint-down(sm) {
-        @include offset(0 0 16px,0 16px 16px);
-    }
+  @include media-breakpoint-down(sm) {
+    @include offset(0 0 16px,0 16px 16px);
+  }
 
-    &.section__body_unstyled {
-        border: 0;
-        padding: 0;
-    }
+  &.section__body_unstyled {
+    border: 0;
+    padding: 0;
+  }
 }
 
 .section__row {
-    @include h5;
-    @include offset(0 -32px,8px 32px);
-    @include border(1px 0 0,$color__border);
-    display: block;
+  @include h5;
+  @include offset(0 -32px,8px 32px);
+  @include border(1px 0 0,$color__border);
+  display: block;
 }
 
 .section__footer {
-    @include media-breakpoint-up(md) {
-        padding: 0 32px 16px;
-    }
+  @include media-breakpoint-up(md) {
+    padding: 0 32px 16px;
+  }
 
-    @include media-breakpoint-down(sm) {
-        padding: 0 16px 16px;
-    }
+  @include media-breakpoint-down(sm) {
+    padding: 0 16px 16px;
+  }
 }
